@startuml der-logistica

hide circle
skinparam linetype ortho
skinparam roundcorner 6

entity "Camion" as camion {
  * id : BIGINT <<PK, identity>>
  --
  patente : VARCHAR
  volumenM3 : DOUBLE
  alturaM : DOUBLE
  capacidadKg : DOUBLE
}

entity "Ruta" as ruta {
  * id : BIGINT <<PK, identity>>
  --
  estado : VARCHAR  <<enum STRING: PLANIFICADA|EN_CURSO|COMPLETADA>>
  linkMapa : VARCHAR
  camion_id : BIGINT <<FK -> Camion, nullable>>
}

entity "ParadaDeRuta" as parada {
  * id : BIGINT <<PK, identity>>
  --
  entidadBeneficiariaId : BIGINT  <<id opaco de Donaciones, sin FK>>
  direccion : VARCHAR
}

entity "Entrega" as entrega {
  * id : BIGINT <<PK, identity>>
  --
  donacionId : BIGINT  <<id opaco de Donaciones, sin FK>>
  entidadBeneficiariaId : BIGINT  <<id opaco de Donaciones, sin FK>>
  direccionDestino : VARCHAR
  estado : VARCHAR  <<enum STRING: PENDIENTE|EN_TRASLADO|ENTREGADA|NO_RECIBIDA>>
  fechaHoraEntrega : TIMESTAMP <<nullable>>
  camionQueEntrego_id : BIGINT <<FK -> Camion, nullable>>
}

entity "Entrega_fotosUrl" as fotos {
  * Entrega_id : BIGINT <<FK -> Entrega>>
  fotosUrl : VARCHAR
}

entity "Ruta_ParadaDeRuta" as ruta_parada {
  * Ruta_id : BIGINT <<FK -> Ruta>>
  * paradas_id : BIGINT <<FK -> ParadaDeRuta, UNIQUE>>
}

entity "ParadaDeRuta_Entrega" as parada_entrega {
  * ParadaDeRuta_id : BIGINT <<FK -> ParadaDeRuta>>
  * entregas_id : BIGINT <<FK -> Entrega, UNIQUE>>
}

ruta }o--o| camion : camion_id
entrega }o--o| camion : camionQueEntrego_id

ruta ||--o{ ruta_parada
ruta_parada }o--|| parada
parada ||--o{ parada_entrega
parada_entrega }o--|| entrega

entrega ||--o{ fotos

@enduml
